K8s/homelab/applications/echoserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  echo-deployment
  namespace: default  
  labels:
    app:  echoserver-label
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 1
  template:
    metadata:
      labels:
        app:  echoserver
    spec:
      containers:
      - name:  echoserver
        image:  ealen/echo-server:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  80
          name:  http
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service
  namespace: default
spec:
  selector:
    app: echoserver
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
