K8s/homelab/applications/echoserver/httproute-cf.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-route-cf
spec:
  parentRefs:
  - name: cf-gateway
    namespace: gateway
    group: gateway.networking.k8s.io	
    kind: Gateway
  hostnames:
  - "echo.z3cyber.tech"
  rules:
   - backendRefs:
      - name: echoserver-service
        port: 80
        group: ''	
        kind: Service
        weight: 1	
     matches:	
        - path:	
            type: PathPrefix	
            value: /
